corrected hero on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -217,6 +217,7 @@ hr{
   display: block;
   overflow: hidden;
   height: 100%;
+  min-height: 500px;
   p{
     padding-bottom: 50px;
     color: $light-muted-text;
@@ -583,14 +584,14 @@ hr{
   }
 
   h1{
-    font-size: 39px;
+    font-size: 35px;
     padding-top: 55px;
   }
 
   .hero-section{
     padding-bottom: 0;
     p{
-      font-size: 17px;
+      font-size: 15px;
       padding-bottom: 25px;
     }
   }
